// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL Mutation Add Topic The add topic mutation returns the topic that was created. 1`] = `
Object {
  "data": Object {
    "addTopic": Object {
      "name": "newTopic",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL Mutation Delete Topic The delete topic mutation returns the topic that was deleted. 1`] = `
Object {
  "data": Object {
    "deleteTopic": Object {
      "name": "topicToBeDeleted",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
